commit for testing purpose only

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,5 +1,5 @@
-DB_NAME="db-name"
-DB_USER="username"
-DB_PASSWORD="password"
-DB_HOST="localhost"
-DB_PORT=3306
+# DB_NAME="db-name"
+# DB_USER="username"
+# DB_PASSWORD="password"
+# DB_HOST="localhost"
+# DB_PORT=3306
