--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Arrizki16/lb-provisioning#readme",
   "dependencies": {
+    "aws-sdk": "^2.1488.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.2",
