--- a/src-gcp/package.json
+++ b/src-gcp/package.json
@@ -19,11 +19,12 @@
   },
   "homepage": "https://github.com/Arrizki16/lb-provisioning#readme",
   "dependencies": {
+    "@google-cloud/storage": "^7.6.0",
     "aws-sdk": "^2.1488.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.2",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1"
   }
 }
